--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">DrawingApp</string>
+    <string name="smallB">image_small</string>
+    <string name="mediumB">image_medium</string>
+    <string name="largeB">image_large</string>
+    <string name="bImage">brush_image</string>
 </resources>
