--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="largeB">image_large</string>
     <string name="bImage">brush_image</string>
     <string name="bcolorPellet">color_pellet</string>
+    <string name="bImg">background image"</string>
 </resources>
